# phenix-directphotons-pp

./: .gitignore  README.md  Run13pp510_RunQuality.txt  notes.txt
AnaHistos/: Acceptance-signal.root  Acceptance-total.root  Acceptance.root  AddHisto_Sasha.C  AnaToolsTowerID.h  BBCCounts.h  BgGPR.C  BgGPR.h  BgGPRMinv.h  Chi2Fit.C  Chi2Fit.h  CommonFunc.h  DataBase.h  DivideFunctions.h  FitMinv.h  Ftest.h  GetEfficiency.h  GetMassWidth.h  GlobalVars.h  HistoIndex.py  IsoPhotonALL.h  MultiGraph.h  Pileup.h  ProbEff.root  QueryTree.h  RawALL.py  ReadGraph.C  ReadGraph.h  Sasha-cross_sep-get_cross_gamma3.h  Sasha_PbGl_trig.txt  Sasha_PbSc_trig.txt  Smear.root  SumSysErr.h  TriggerEfficiency.root  anaBBCEff.C  anaBBCEff_Photon.C  anaBBCEff_Pion.C  anaDCCheck.C  anaIsoPhotonALL.C  anaIsoPhotonALLByFill.C  (+204 more)
AnaHistos/data/: Acceptance-isophoton.root  Acceptance-photon.root  Acceptance-pion.root  Acceptance.root  BBCEff-pileup.root  BBCEff.root  BR.root  ConversionRate.root  CrossSection-pion.root  ERTEff-photon.root  ERTEff-pion.root  ERTEff.root  EtaPi0Ratio.txt  GammaRatio-histo.root  IsoAll2IsoAcc.root  Merge-1photon.root  Merge-2photon.root  Merge-photon.root  Merge.root  MergePassRate.root  MissCorr.root  MissingRatio.root  NBBC.txt  Pi0PP-histo.root  Pi0PP-sasha-histo.root  Pileup-fit.root  ProbEff-photon.root  ProbEff-pion.root  ProbEff.root  ProdRatio-histo-200gev.root  ProdRatio-histo-510gev.root  SelfVeto.root  SpinPattern.root  ToFEff-fit.root  YieldCmpByRun.root  atlas-cross.txt  clock-counts.root  dir-halfpt.root  dir-twopt.root  dir.root  (+23 more)
AnaHistos/hepdata/: A_LL.txt  A_LL.yaml  xsec.txt  xsec.yaml
ProjectUncertainties/: projection1.py  projection2.py  projection_dssv.py  projection_grsv.py  xsec_directphoton_pp200.txt  xsec_pi0_pp200.txt  xsec_pi0_pp510.txt
analysis-macros/cuts-check/: plot_2photon_invmass_cuts.C
analysis-macros/directphoton/: plot_2photon_invmass.C  test_fits.C
analysis-macros/escale-check/: extract_pi0peak_1run.sh  plot_stability_mean.C
analysis-macros/event-display-pythia6/: pythia_display.C
analysis-macros/muliticollision/: extract_rates.sh  nphotons_vs_eventrate.C
analysis-macros/pi0yield/: RunQA_Run13_Test.txt  Runlist_Run13_Test.txt  compare_pi0_raw_yield.C  (+2 more)
data/: merge_runs_DirectPhotonPP.sh  merge_runs_DirectPhotonPP_Warnmap.sh  merge_runs_DirectPhotonPP_bunch.sh  templist.txt
directphoton/: fit_2photon_invmass.py  plot_1photon_pT.C
emcalcalib/: extract_pi0peak.C  extract_pi0peak.sh
escale-check/: extract_pi0peak.C  extract_pi0peak.sh  extract_pi0peak_1run.sh  plot_stability.py  plot_stability_sigma.C
fun4all/offline/AnalysisTrain/DirectPhotonPP/: AnaToolsCluster.h  AnaToolsTowerID.h  AnaToolsTrigger.h  DCDeadmapChecker.cc  DCDeadmapChecker.h  DirectPhotonPP.cc  DirectPhotonPP.h  DirectPhotonPPLinkDef.h  DirectPhotonPP_v0.cc  DirectPhotonPP_v0.h  EMCWarnmapChecker.cc  EMCWarnmapChecker.h  EmcLocalRecalibrator.cc  EmcLocalRecalibrator.h  EmcLocalRecalibratorSasha.cc  EmcLocalRecalibratorSasha.h  HistogramBooker.cc  HistogramBooker.h  Makefile.am  Photon.cc  Photon.h  PhotonContainer.cc  PhotonContainer.h  PhotonContainerMB.cc  PhotonContainerMB.h  PhotonERT.cc  PhotonERT.h  PhotonHistos.cc  PhotonHistos.h  PhotonMB.cc  PhotonMB.h  PhotonNode.cc  PhotonNode.h  PhotonNodeMB.cc  PhotonNodeMB.h  Run13pp510_WarnMap_05.root  SpinPattern.cc  SpinPattern.h  configure.ac  configure.in  (+3 more)
fun4all/offline/AnalysisTrain/DirectPhotonPP/CVS/: Entries  Repository
fun4all/offline/analysis/Run13ppDirectPhoton/warnmap/: AnaToolsTowerID.h  GenerateWarnmap.cc  GenerateWarnmap.h  GenerateWarnmapLinkDef.h  Makefile.am  autogen.sh  configure.ac  configure.in
fun4all/offline/analysis/Run13ppDirectPhoton/warnmap/CVS/: Entries  Repository
fun4all/offline/database/odbcexample/: Makefile.am  configure.in  getBBCCount-allruns.C  getBBCCount.C  odbcexample.C
fun4all/offline/database/odbcexample/CVS/: Entries  Repository
muliticollision/: nphotons_vs_eventrate.C
pi0photons/: plot_invmass.C
tof-check/: plot_tof.C
warnmap/: allruns_Run13pp510ERT_temp.txt  compare_warnmaps.py  extract_cluster_per_run.C  extract_events_per_run.C  extract_events_per_run.sh  generate_pTspectrum_warnmap.C  generate_warnmap.C  generate_warnmap_histlist.txt  merge_energyranges.C  merge_energyranges.sh  merge_runs.sh  merge_runs_DirectPhotonPP.sh  merge_warnmaps.py  merge_warnmaps.sh  plot_cluster_vs_run.C  plot_hitrate_threshold.C  plot_hitrate_threshold.sh  plot_pTspectrum_warnmap.C  plot_warnmap2D.C  plot_warnmap2D.sh  plot_warnmap2D_paul.C  plot_warnmap_summary.py  print_warnmap_summary.py  print_warnmap_summary.sh  warnmap-data
warnmap-check/: plot_pTspectrum_warnmap.C
(+536 files in other folders)
